--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,165 @@
 @import '~bootstrap/scss/bootstrap';
+* {
+  box-sizing: border-box;
+}
+body{
+  background-color: #fbc326;
+}
+#header {
+  background-color: #fce41a;
+  height: 150px;
+  width: 100%;
+}
+
+h1{
+  padding-top: 20px;
+  text-align: center;
+  color: #1d7d9e;
+}
+.game-header{
+  padding-top: 20px;
+  text-align: center;
+  color: #1d7d9e;
+  float: left;
+}
+span {
+  color: #d4320e;
+}
+.row {
+  display: flex;
+}
+.column {
+  background-color: white;
+  float: left;
+  width: 45%;
+  height: 400px;
+  border: 10px solid #fbc326;
+  border-radius: 5%;
+  opacity: 80%;
+  margin: 50px auto;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+
+}
+
+input {
+  margin: 10px 30px;
+}
+
+button {
+	box-shadow:inset 0px 1px 0px 0px #B2DFEE;
+	background:linear-gradient(to bottom, #B2DFEE 10%, #0099CC 100%);
+	background-color:#0099CC;
+	border-radius:6px;
+	border:1px solid #0099CC;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #0099CC;
+  width: auto;
+  align-self: center;
+}
+button:hover {
+	background:linear-gradient(to bottom, #80b5ea 5%, #bddbfa 100%);
+	background-color:#80b5ea;
+}
+button:active {
+	position:relative;
+	top:1px;
+}
+
+h2 {
+  text-align: center;
+  margin-top: 10px;
+  color:#0276FD;
+}
+
+placeholder {
+  color: #fbc326;
+}
+.box {
+  align-items: center;
+   background-color: #d4320e;
+   border: 5px solid #dc7c15;
+   display: flex;
+   height: 150px;
+   justify-content: center;
+   border-radius: 10%;
+   font-size: 3em;
+   font-weight: bolder;
+   color: white;
+ }
+.container{
+  margin: 300px auto;
+}
+.row {
+  width: 60%;
+  margin: 50px auto;
+}
+.letter-x{
+  height: 80px;
+  background-color: #1d7d9e;
+  border: 2px solid white;
+}
+.letter-o {
+  height:  80px;
+  background-color: #fce41a;
+  border: 2px solid white;
+}
+
+.col-6 {
+  text-align: center;
+  font-size: 36px;
+  padding: 10px;
+}
+
+.wrap {
+  text-align: center;
+  float: right;
+  margin-right: 25px;
+  padding: 10px 0s;
+
+}
+.wrap button {
+  width: 150px;
+  margin-right: 5px;
+}
+
+@media (max-width: 1000px) {
+  .row {
+    display: flex;
+  }
+  .column {
+    background-color: white;
+    float: left;
+    width: 100%;
+    height: 400px;
+    border: 10px solid #fbc326;
+    border-radius: 5%;
+    opacity: 80%;
+
+  }
+}
+#massege {
+
+}
+
+.success{
+  color: #1d7d9e;
+  text-align: right;
+  padding: 10px;
+}
+
+.failure {
+  color: #d4320e;
+  text-align: right;
+}
