--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -94,7 +94,6 @@ placeholder {
    height: 150px;
    justify-content: center;
    border-radius: 10%;
-   font-size: 3em;
    font-weight: bolder;
    color: white;
  }
@@ -190,6 +189,15 @@ placeholder {
   margin: auto;
 }
 #games-index {
+  display: block;
+  max-width: 300px;
+  margin: auto;
+}
+.hidden-newGame {
+  display: none;
+  margin-top: 20px;
+}
+#new-game{
   display: block;
   max-width: 300px;
   margin: auto;
