--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -198,6 +198,24 @@ placeholder {
    .letter-x {
      font-size: 28px;
    }
+   .row {
+     display: flex;
+   }
+   .column {
+     background-color: white;
+     float: left;
+     width: 100%;
+     height: 400px;
+     border: 10px solid #fbc326;
+     border-radius: 5%;
+     opacity: 80%;
+   }
+   .set-page {
+     display: flex;
+   flex-direction: column;
+   align-items: flex-start;
+   }
+
 }
 #massege {
 
@@ -262,4 +280,10 @@ width: 100%;
 height: 100px;
 font-size: 36px;
 background: rgba(255, 255, 255, 0.6);
+}
+
+.set-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
