--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -279,7 +279,6 @@ placeholder {
 }
 
 #totalGame {
-display: none;
 text-align: center;
 color:#d4320e;
 width: 100%;
@@ -414,13 +413,13 @@ background: rgba(255, 255, 255, 0.6);
 }
 
 #totalGame {
-display: none;
 text-align: center;
 color:#d4320e;
 width: 100%;
 height: 100px;
 font-size: 36px;
 background: rgba(255, 255, 255, 0.6);
+margin: 50px 0;
 }
 
 .set-page {
