try to edit sign Out try to add the massege if user did not finish the game and want to sign out, but it not success process. so the code stay the same as last commit.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -195,6 +195,12 @@ placeholder {
   max-width: 300px;
   margin: auto;
 }
+#set-text {
+  text-align: center;
+  font-size: 24px;
+  color:#d4320e;
+
+}
 
 #totalGame {
 text-align: center;
