fix board click bug try to make the game board unable to click  if x/o There but I can't make it work.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -10,7 +10,12 @@ body{
   height: 150px;
   width: 100%;
 }
-
+#warning {
+  background-color: #d4320e;
+  color: #fce41a;
+  text-align: center;
+  font-size: 28px;
+}
 h1{
   padding-top: 20px;
   text-align: center;
