Chang the click handle on onGamesUpdate to check if the tie game board is empty or not if not show the message that the spot has taken.   - the message show successfully that the spot has taken, but   the user still can click and change the value of the currentPlayer   and it make the win lose not show properly.   - next solve try to fix that not allow user to change the value in   array.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -249,6 +249,14 @@ footer {
 #sign-out {
   display: none;
 }
+.disabled {
+  pointer-events: none;
+  cursor: not-allowed;
+  opacity: 0.65;
+  filter: alpha(opacity=65);
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
 
 @media (max-width: 1000px) {
   .box {
