--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -250,11 +250,10 @@ footer {
   display: none;
 }
 .disabled {
+  cursor: no-drop;
   pointer-events: none;
-  cursor: not-allowed;
   opacity: 0.65;
   filter: alpha(opacity=65);
-  -webkit-box-shadow: none;
   box-shadow: none;
 }
 
