show the game cell array. I get my cells array from response api to the cells of the game that already over. my next step is to show that the game over, who win.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -193,6 +193,11 @@ placeholder {
   max-width: 300px;
   margin: auto;
 }
+#games-show {
+  display: block;
+  max-width: 300px;
+  margin: 10px auto;
+}
 .hidden-newGame {
   display: none;
   margin-top: 20px;
